# MRVN-Explorer

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build.yml
explorer/: main.cpp
explorer/core/: cscene.cpp  cscene.hpp
explorer/core/bsp/: ibsp.cpp  ibsp.hpp
explorer/core/bsp/apex_legends/: apexlegends.cpp  apexlegends.hpp  apexlegends_render.cpp  apexlegends_structs.hpp  apexlegends_windows.cpp  capexlegendsbsp.cpp  capexlegendsbsp.hpp
explorer/core/bsp/titanfall/: ctitanfallbsp.cpp  ctitanfallbsp.hpp  titanfall.cpp  titanfall.hpp  titanfall_render.cpp  titanfall_structs.hpp  titanfall_windows.cpp
explorer/renderer/: ccamera.cpp  ccamera.hpp  cmaterial.hpp  crenderer.cpp  crenderer.hpp  cshader.hpp
explorer/ui/: cmainwindow.cpp  cmainwindow.hpp
explorer/utils/: cfilesink.hpp  globals.hpp  logging.cpp  logging.hpp  math.hpp
shaders/: basic.frag  basic.vert
